6 ASes with pingable hosts

--- a/conf/zebra-R100.conf
+++ b/conf/zebra-R100.conf
@@ -10,10 +10,13 @@ interface lo
   ip address 127.0.0.1/32
 
 interface R100-eth1
-  ip address 10.10.100.254/24
+  ip address 10.100.0.254/24
 
 interface R100-eth2
-  ip address 10.10.12.1/30
+  ip address 10.10.110.2/30
+
+interface R100-eth3
+  ip address 10.10.140.2/30
 
 !
 
