--- a/conf/zebra-R200.conf
+++ b/conf/zebra-R200.conf
@@ -10,10 +10,13 @@ interface lo
   ip address 127.0.0.1/32
 
 interface R200-eth1
-  ip address 10.10.200.254/24
+  ip address 10.200.0.254/24
 
 interface R200-eth2
-  ip address 10.10.12.2/30
+  ip address 10.10.220.2/30
+
+interface R200-eth3
+  ip address 10.10.230.2/30
 
 !
 
