traceroute and IP addresses changed

--- a/conf/bgpd-R100.conf
+++ b/conf/bgpd-R100.conf
@@ -5,23 +5,25 @@ enable password en
 router bgp 100
   bgp router-id 100.100.100.100
   network 10.100.0.0/22
+  network 9.0.110.0/30
+  network 9.0.140.0/30
 
-  neighbor 10.10.110.1 remote-as 10
-  neighbor 10.10.110.1 ebgp-multihop
-  neighbor 10.10.110.1 next-hop-self
-  neighbor 10.10.110.1 timers 5 5
+  neighbor 9.0.110.1 remote-as 10
+  neighbor 9.0.110.1 ebgp-multihop
+  neighbor 9.0.110.1 next-hop-self
+  neighbor 9.0.110.1 timers 5 5
 
-  neighbor 10.10.140.1 remote-as 40
-  neighbor 10.10.140.1 ebgp-multihop
-  neighbor 10.10.140.1 next-hop-self
-  neighbor 10.10.140.1 timers 5 5
+  neighbor 9.0.140.1 remote-as 40
+  neighbor 9.0.140.1 ebgp-multihop
+  neighbor 9.0.140.1 next-hop-self
+  neighbor 9.0.140.1 timers 5 5
   
 log file /tmp/R100-bgpd.log
 
-debug bgp as4
+! debug bgp as4
 debug bgp events
-debug bgp filters
-debug bgp fsm
+! debug bgp filters
+! debug bgp fsm
 debug bgp keepalives
 debug bgp updates
 
