--- a/conf/bgpd-R20.conf
+++ b/conf/bgpd-R20.conf
@@ -5,28 +5,30 @@ enable password en
 router bgp 20
   bgp router-id 20.20.20.20
   network 10.20.0.0/22
+  network 9.0.30.0/30
+  network 9.0.220.0/30
 
-  neighbor 10.10.30.1 remote-as 10
-  neighbor 10.10.30.1 ebgp-multihop
-  neighbor 10.10.30.1 next-hop-self
-  neighbor 10.10.30.1 timers 5 5
+  neighbor 9.0.30.1 remote-as 10
+  neighbor 9.0.30.1 ebgp-multihop
+  neighbor 9.0.30.1 next-hop-self
+  neighbor 9.0.30.1 timers 5 5
 
-  neighbor 10.10.50.2 remote-as 30
-  neighbor 10.10.50.2 ebgp-multihop
-  neighbor 10.10.50.2 next-hop-self
-  neighbor 10.10.50.2 timers 5 5
+!  neighbor 9.0.50.2 remote-as 30
+!  neighbor 9.0.50.2 ebgp-multihop
+!  neighbor 9.0.50.2 next-hop-self
+!  neighbor 9.0.50.2 timers 5 5
 
-  neighbor 10.10.220.2 remote-as 200
-  neighbor 10.10.220.2 ebgp-multihop
-  neighbor 10.10.220.2 next-hop-self
-  neighbor 10.10.220.2 timers 5 5
+  neighbor 9.0.220.2 remote-as 200
+  neighbor 9.0.220.2 ebgp-multihop
+  neighbor 9.0.220.2 next-hop-self
+  neighbor 9.0.220.2 timers 5 5
   
 log file /tmp/R20-bgpd.log
 
-debug bgp as4
+! debug bgp as4
 debug bgp events
-debug bgp filters
-debug bgp fsm
+! debug bgp filters
+! debug bgp fsm
 debug bgp keepalives
 debug bgp updates
 
