--- a/conf/bgpd-R200.conf
+++ b/conf/bgpd-R200.conf
@@ -5,23 +5,25 @@ enable password en
 router bgp 200
   bgp router-id 200.200.200.200
   network 10.200.0.0/22
+  network 9.0.220.0/30
+  network 9.0.230.0/30
 
-  neighbor 10.10.220.1 remote-as 20
-  neighbor 10.10.220.1 ebgp-multihop
-  neighbor 10.10.220.1 next-hop-self
-  neighbor 10.10.220.1 timers 5 5
+  neighbor 9.0.220.1 remote-as 20
+  neighbor 9.0.220.1 ebgp-multihop
+  neighbor 9.0.220.1 next-hop-self
+  neighbor 9.0.220.1 timers 5 5
 
-  neighbor 10.10.230.1 remote-as 30
-  neighbor 10.10.230.1 ebgp-multihop
-  neighbor 10.10.230.1 next-hop-self
-  neighbor 10.10.230.1 timers 5 5
+  neighbor 9.0.230.1 remote-as 30
+  neighbor 9.0.230.1 ebgp-multihop
+  neighbor 9.0.230.1 next-hop-self
+  neighbor 9.0.230.1 timers 5 5
 
 log file /tmp/R200-bgpd.log
 
-debug bgp as4
+! debug bgp as4
 debug bgp events
-debug bgp filters
-debug bgp fsm
+! debug bgp filters
+! debug bgp fsm
 debug bgp keepalives
 debug bgp updates
 
