--- a/conf/bgpd-R10.conf
+++ b/conf/bgpd-R10.conf
@@ -5,23 +5,25 @@ enable password en
 router bgp 10
   bgp router-id 10.10.10.10
   network 10.10.0.0/22
+  network 9.0.30.0/30
+  network 9.0.110.0/30
 
-  neighbor 10.10.110.2 remote-as 100
-  neighbor 10.10.110.2 ebgp-multihop
-  neighbor 10.10.110.2 next-hop-self
-  neighbor 10.10.110.2 timers 5 5
+  neighbor 9.0.110.2 remote-as 100
+  neighbor 9.0.110.2 ebgp-multihop
+  neighbor 9.0.110.2 next-hop-self
+  neighbor 9.0.110.2 timers 5 5
 
-  neighbor 10.10.30.2 remote-as 20
-  neighbor 10.10.30.2 ebgp-multihop
-  neighbor 10.10.30.2 next-hop-self
-  neighbor 10.10.30.2 timers 5 5
+  neighbor 9.0.30.2 remote-as 20
+  neighbor 9.0.30.2 ebgp-multihop
+  neighbor 9.0.30.2 next-hop-self
+  neighbor 9.0.30.2 timers 5 5
   
 log file /tmp/R10-bgpd.log
 
-debug bgp as4
+! debug bgp as4
 debug bgp events
-debug bgp filters
-debug bgp fsm
+! debug bgp filters
+! debug bgp fsm
 debug bgp keepalives
 debug bgp updates
 
