--- a/conf/bgpd-R40.conf
+++ b/conf/bgpd-R40.conf
@@ -5,23 +5,25 @@ enable password en
 router bgp 40
   bgp router-id 40.40.40.40
   network 10.40.0.0/22
+  network 9.0.70.0/30
+  network 9.0.140.0/30
 
-  neighbor 10.10.70.1 remote-as 30
-  neighbor 10.10.70.1 ebgp-multihop
-  neighbor 10.10.70.1 next-hop-self
-  neighbor 10.10.70.1 timers 5 5
+  neighbor 9.0.70.1 remote-as 30
+  neighbor 9.0.70.1 ebgp-multihop
+  neighbor 9.0.70.1 next-hop-self
+  neighbor 9.0.70.1 timers 5 5
 
-  neighbor 10.10.140.2 remote-as 100
-  neighbor 10.10.140.2 ebgp-multihop
-  neighbor 10.10.140.2 next-hop-self
-  neighbor 10.10.140.2 timers 5 5
+  neighbor 9.0.140.2 remote-as 100
+  neighbor 9.0.140.2 ebgp-multihop
+  neighbor 9.0.140.2 next-hop-self
+  neighbor 9.0.140.2 timers 5 5
   
 log file /tmp/R40-bgpd.log
 
-debug bgp as4
+! debug bgp as4
 debug bgp events
-debug bgp filters
-debug bgp fsm
+! debug bgp filters
+! debug bgp fsm
 debug bgp keepalives
 debug bgp updates
 
