preferred path via route-map

--- a/conf/bgpd-R200.conf
+++ b/conf/bgpd-R200.conf
@@ -1,10 +1,11 @@
 hostname bgpd-R200
 password en
 enable password en
-
+!
 router bgp 200
   bgp router-id 200.200.200.200
   network 10.200.0.0/22
+
   network 9.0.220.0/30
   network 9.0.230.0/30
 
@@ -12,21 +13,41 @@ router bgp 200
   neighbor 9.0.220.1 ebgp-multihop
   neighbor 9.0.220.1 next-hop-self
   neighbor 9.0.220.1 timers 5 5
+  neighbor 9.0.220.1 route-map 100w200 in
+  neighbor 9.0.220.1 route-map 101w200 in
 
   neighbor 9.0.230.1 remote-as 30
   neighbor 9.0.230.1 ebgp-multihop
   neighbor 9.0.230.1 next-hop-self
   neighbor 9.0.230.1 timers 5 5
-
+  neighbor 9.0.230.1 route-map 100w100 in
+  neighbor 9.0.230.1 route-map 101w100 in
+!
+ip prefix-list 100-prefix-list permit 10.100.0.0/22
+ip prefix-list 101-prefix-list permit 10.101.0.0/22
+!
+route-map 100w100 permit 10
+   match ip address prefix-list 100-prefix-list
+   set weight 100
+route-map 100w100 permit 20
+!
+route-map 100w200 permit 10
+   match ip address prefix-list 100-prefix-list
+   set weight 200
+route-map 100w200 permit 20
+!
+route-map 101w100 permit 10
+   match ip address prefix-list 101-prefix-list
+   set weight 100
+route-map 101w100 permit 20
+!
+route-map 101w200 permit 10
+   match ip address prefix-list 101-prefix-list
+   set weight 200
+route-map 101w200 permit 20
+!
 log file /tmp/R200-bgpd.log
-
-! debug bgp as4
 debug bgp events
-! debug bgp filters
-! debug bgp fsm
 debug bgp keepalives
 debug bgp updates
-
-!
-
 log stdout
