--- a/conf/bgpd-R100.conf
+++ b/conf/bgpd-R100.conf
@@ -1,10 +1,11 @@
 hostname bgpd-R100
 password en
 enable password en
-
+!
 router bgp 100
   bgp router-id 100.100.100.100
   network 10.100.0.0/22
+  network 10.101.0.0/22
   network 9.0.110.0/30
   network 9.0.140.0/30
 
@@ -12,21 +13,28 @@ router bgp 100
   neighbor 9.0.110.1 ebgp-multihop
   neighbor 9.0.110.1 next-hop-self
   neighbor 9.0.110.1 timers 5 5
+  neighbor 9.0.110.1 route-map w200 in
 
   neighbor 9.0.140.1 remote-as 40
   neighbor 9.0.140.1 ebgp-multihop
   neighbor 9.0.140.1 next-hop-self
   neighbor 9.0.140.1 timers 5 5
-  
+  neighbor 9.0.140.1 route-map w100 in
+!
+ip prefix-list tmp-prefix-list permit 10.200.0.0/22
+!
+route-map w100 permit 10
+   match ip address prefix-list tmp-prefix-list
+   set weight 100
+route-map w100 permit 20
+!
+route-map w200 permit 10
+   match ip address prefix-list tmp-prefix-list
+   set weight 200
+route-map w200 permit 20
+!
 log file /tmp/R100-bgpd.log
-
-! debug bgp as4
 debug bgp events
-! debug bgp filters
-! debug bgp fsm
 debug bgp keepalives
 debug bgp updates
-
-!
-
 log stdout
