--- a/conf/bgpd-R200.conf
+++ b/conf/bgpd-R200.conf
@@ -13,38 +13,23 @@ router bgp 200
   neighbor 9.0.220.1 ebgp-multihop
   neighbor 9.0.220.1 next-hop-self
   neighbor 9.0.220.1 timers 5 5
-  neighbor 9.0.220.1 route-map 100w200 in
-  neighbor 9.0.220.1 route-map 101w200 in
+  neighbor 9.0.220.1 route-map route-map-w100 in
 
   neighbor 9.0.230.1 remote-as 30
   neighbor 9.0.230.1 ebgp-multihop
   neighbor 9.0.230.1 next-hop-self
   neighbor 9.0.230.1 timers 5 5
-  neighbor 9.0.230.1 route-map 100w100 in
-  neighbor 9.0.230.1 route-map 101w100 in
 !
-ip prefix-list 100-prefix-list permit 10.100.0.0/22
-ip prefix-list 101-prefix-list permit 10.101.0.0/22
+ip prefix-list prefix-list-100 permit 10.100.0.0/22
+ip prefix-list prefix-list-101 permit 10.101.0.0/22
 !
-route-map 100w100 permit 10
-   match ip address prefix-list 100-prefix-list
+route-map route-map-w100 permit 10
+   match ip address prefix-list prefix-list-100
    set weight 100
-route-map 100w100 permit 20
-!
-route-map 100w200 permit 10
-   match ip address prefix-list 100-prefix-list
-   set weight 200
-route-map 100w200 permit 20
-!
-route-map 101w100 permit 10
-   match ip address prefix-list 101-prefix-list
+route-map route-map-w100 permit 20
+   match ip address prefix-list prefix-list-101
    set weight 100
-route-map 101w100 permit 20
-!
-route-map 101w200 permit 10
-   match ip address prefix-list 101-prefix-list
-   set weight 200
-route-map 101w200 permit 20
+route-map route-map-w100 permit 30
 !
 log file /tmp/R200-bgpd.log
 debug bgp events
