more fix on preferred path via route-map

--- a/conf/bgpd-R100.conf
+++ b/conf/bgpd-R100.conf
@@ -13,25 +13,19 @@ router bgp 100
   neighbor 9.0.110.1 ebgp-multihop
   neighbor 9.0.110.1 next-hop-self
   neighbor 9.0.110.1 timers 5 5
-  neighbor 9.0.110.1 route-map w200 in
+  neighbor 9.0.110.1 route-map route-map-w100 in
 
   neighbor 9.0.140.1 remote-as 40
   neighbor 9.0.140.1 ebgp-multihop
   neighbor 9.0.140.1 next-hop-self
   neighbor 9.0.140.1 timers 5 5
-  neighbor 9.0.140.1 route-map w100 in
 !
-ip prefix-list tmp-prefix-list permit 10.200.0.0/22
+ip prefix-list prefix-list-200 permit 10.200.0.0/22
 !
-route-map w100 permit 10
-   match ip address prefix-list tmp-prefix-list
+route-map route-map-w100 permit 10
+   match ip address prefix-list prefix-list-200
    set weight 100
-route-map w100 permit 20
-!
-route-map w200 permit 10
-   match ip address prefix-list tmp-prefix-list
-   set weight 200
-route-map w200 permit 20
+route-map route-map-w100 permit 20
 !
 log file /tmp/R100-bgpd.log
 debug bgp events
