working nat after attack

--- a/conf/zebra-R100.conf
+++ b/conf/zebra-R100.conf
@@ -18,8 +18,8 @@ interface R100-eth2
 interface R100-eth3
   ip address 9.0.140.2/30
 
-interface R100-eth4
-  ip address 10.101.0.254/24
+!interface R100-eth4
+!  ip address 10.200.0.254/24
 
 !
 
